--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fozy",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -35,6 +35,7 @@
     "koa-json": "^1.1.1",
     "koa-logger": "^1.3.0",
     "koa-onerror": "^1.2.1",
+    "koa-proxy": "^0.6.0",
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
     "koa-views": "^5.0.1"
