--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fozy",
-  "version": "0.0.5",
+  "version": "0.0.8",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -20,10 +20,7 @@
   ],
   "repository": "https://github.com/elcarim5efil/fozy",
   "dependencies": {
-    "babel-core": "^6.14.0",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-3": "^6.11.0",
     "bluebird": "^3.4.6",
     "browser-sync": "^2.16.0",
     "co": "^4.6.0",
@@ -37,6 +34,13 @@
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
-    "koa-views": "^5.0.1"
+    "koa-views": "^5.0.1",
+    "request": "^2.75.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-3": "^6.11.0"
   }
 }
