--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
     "koa-convert": "^1.2.0",
+    "koa-http-proxy": "0.0.1",
     "koa-json": "^1.1.1",
     "koa-logger": "^1.3.0",
     "koa-onerror": "^1.2.1",
