--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fozy",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -27,6 +27,7 @@
     "co": "^4.6.0",
     "debug": "^2.2.0",
     "freemarker.js": "^1.2.2",
+    "handlebars": "^4.0.5",
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
     "koa-convert": "^1.2.0",
