--- a/package.json
+++ b/package.json
@@ -25,19 +25,17 @@
     "bluebird": "^3.4.6",
     "browser-sync": "^2.16.0",
     "co": "^4.6.0",
-    "debug": "^2.2.0",
     "freemarker.js": "^1.2.2",
     "handlebars": "^4.0.5",
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
     "koa-convert": "^1.2.0",
-    "koa-http-proxy": "0.0.1",
     "koa-json": "^1.1.1",
     "koa-logger": "^1.3.0",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
-    "koa-views": "^5.0.1",
+    "koa2-http-proxy": "0.0.4",
     "request": "^2.75.0"
   },
   "devDependencies": {
