--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
   "dependencies": {
     "babel-polyfill": "^6.13.0",
     "bluebird": "^3.4.6",
-    "browser-sync": "^2.16.0",
+    "browser-sync": "^2.18.12",
     "co": "^4.6.0",
     "freemarker.js": "1.2.2",
     "handlebars": "^4.0.5",
     "json5": "^0.5.1",
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
-    "koa-browser-sync": "^1.0.1",
     "koa-convert": "^1.2.0",
     "koa-json": "^1.1.1",
     "koa-logger": "^1.3.0",
@@ -38,7 +37,8 @@
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
     "koa2-http-proxy": "0.0.4",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "stream-injecter": "0.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
