--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fozy",
-    "version": "0.4.0",
+    "version": "0.5.0",
     "description": "",
     "main": "index.js",
     "bin": {
@@ -25,7 +25,7 @@
         "babel-polyfill": "^6.13.0",
         "bluebird": "^3.4.6",
         "browser-sync": "^2.18.12",
-        "co": "^4.6.0",
+        "chalk": "^2.0.1",
         "freemarker.js": "1.2.2",
         "handlebars": "^4.0.5",
         "http-proxy": "^1.16.2",
@@ -35,10 +35,8 @@
         "koa-convert": "^1.2.0",
         "koa-json": "^1.1.1",
         "koa-logger": "^1.3.0",
-        "koa-onerror": "^1.2.1",
         "koa-router": "^7.0.0",
         "koa-static": "^2.0.0",
-        "koa2-http-proxy": "0.0.4",
         "request": "^2.75.0",
         "stream-injecter": "0.0.1"
     },
