--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fozy",
-    "version": "0.5.2",
+    "version": "0.5.3",
     "description": "",
     "main": "index.js",
     "bin": {
@@ -8,7 +8,8 @@
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "compile": "./node_modules/.bin/babel -d lib/ src/ --watch",
+        "dev": "./node_modules/.bin/babel -d lib/ src/ --watch",
+        "build": "./node_modules/.bin/babel -d lib/ src/",
         "lint": "eslint ./ --fix"
     },
     "author": "elcarim5efil",
