--- a/package.json
+++ b/package.json
@@ -24,31 +24,31 @@
   ],
   "repository": "https://github.com/elcarim5efil/fozy",
   "dependencies": {
-    "babel-polyfill": "^6.13.0",
-    "bluebird": "^3.4.6",
-    "browser-sync": "^2.18.12",
-    "chalk": "^2.0.1",
-    "freemarker.js": "1.2.2",
-    "handlebars": "^4.0.5",
+    "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.5.1",
+    "browser-sync": "^2.18.13",
+    "chalk": "^2.3.0",
+    "freemarker.js": "^1.3.0",
+    "handlebars": "^4.0.11",
     "http-proxy": "^1.16.2",
     "json5": "^0.5.1",
-    "koa": "^2.0.0",
-    "koa-bodyparser": "^2.0.1",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
-    "koa-json": "^1.1.1",
-    "koa-logger": "^1.3.0",
-    "koa-router": "^7.0.0",
-    "koa-static": "^2.0.0",
-    "request": "^2.75.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.1.0",
+    "koa-router": "^7.2.1",
+    "koa-static": "^4.0.1",
+    "request": "^2.83.0",
     "stream-injecter": "0.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-3": "^6.11.0",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb-base": "^11.3.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.7.0"
   }
 }
