--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "koa-logger": "^1.3.0",
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
+    "koa2-cors": "^2.0.6",
     "node-uuid": "^1.4.8",
     "request": "^2.75.0",
     "stream-injecter": "0.0.1"
