misc:删除prepublishOnly,并更新版本

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fozy",
-  "version": "0.8.0-0-beta",
+  "version": "0.8.1",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -10,7 +10,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "./node_modules/.bin/babel -d lib/ src/ --watch",
     "build": "./node_modules/.bin/babel -d lib/ src/",
-    "prepublishOnly": "rm -rf lib && npm run build",
     "lint": "eslint ./ --fix"
   },
   "author": "elcarim5efil",
