--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fozy",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -39,6 +39,7 @@
     "koa-logger": "^1.3.0",
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
+    "koa2-cors": "^2.0.6",
     "request": "^2.75.0",
     "stream-injecter": "0.0.1"
   },
