--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fozy",
-  "version": "0.8.2",
+  "version": "0.8.5",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -27,7 +27,7 @@
     "bluebird": "^3.4.6",
     "browser-sync": "^2.18.12",
     "chalk": "^2.0.1",
-    "freemarker.js": "1.2.2",
+    "freemarker.js": "^1.4.0",
     "handlebars": "^4.0.5",
     "http-proxy": "^1.16.2",
     "json5": "^0.5.1",
@@ -38,16 +38,11 @@
     "koa-logger": "^1.3.0",
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
-    "koa2-cors": "^2.0.6",
     "node-uuid": "^1.4.8",
     "request": "^2.75.0",
     "stream-injecter": "0.0.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-3": "^6.11.0",
     "eslint": "^4.3.0",
     "eslint-config-airbnb-base": "^11.3.0",
     "eslint-plugin-import": "^2.7.0"
